# deepgraph

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DETAILED_REVIEW.md  DISK_STORAGE_PLAN.md  EXCEPTION_HANDLING_VERIFICATION.md  GETTING_STARTED.md  IMPORT_IMPLEMENTATION_PLAN.md  LICENSE  LOGGING_IMPLEMENTATION_COMPLETE.md  PHASE1_SUMMARY.md  PHASE2_STATUS.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE4_PROGRESS.md  PRODUCTION_READINESS_AUDIT.md  PYTHON_BINDINGS_COMPLETE.md  README.md  ROBUSTNESS_ASSESSMENT.md  SECURITY.md  SESSION_SUMMARY.md  STORAGE_QUICK_REFERENCE.md  config.toml  env.example  pyproject.toml  pythonAPI.md  test_disk_storage_python.py  test_import_python.py  test_repl_cli.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
PyRustTest/: DELETE_BEHAVIOR_ANALYSIS.md  FINAL_SUMMARY.md  INVESTIGATION_COMPLETE.md  README.md  TEST_PROGRESS.md  test_1_core_operations.py  test_1_core_operations_extended.py  test_2_transactions.py  test_3_indexing.py  test_4_durability.py  test_5_query_language.py  test_6_cypher_queries.py
benches/: graph_ops.rs
doc/: API.md  CLI_GUIDE.md  IMPORT_GUIDE.md  KUZU_COMPARISON.md  PHASE2_COMPLETE.md  PHASE2_PLAN.md  PHASE2_PROGRESS.md  PHASE4_COMPLETE.md  PYTHON_QUICKSTART.md  README.md  STATUS.md
examples/python/: README.md  basic_usage.py  comprehensive_test.py  full_api_test.py  social_network.py  test_algorithms.py
examples/rust/: config_demo.rs
python/deepgraph/: __init__.py
src/: config.rs  error.rs  graph.rs  lib.rs  parser.rs  python.rs  transaction.rs
src/algorithms/: centrality.rs  community.rs  connectivity.rs  embedding.rs  mod.rs  shortest_path.rs  structural.rs  traversal.rs
src/import/: csv.rs  json.rs  mod.rs
src/index/: btree.rs  hash.rs  manager.rs  mod.rs
src/mvcc/: deadlock.rs  mod.rs  snapshot.rs  txn_manager.rs  version.rs
src/persistence/: mod.rs  parquet_io.rs  snapshot.rs
src/query/: ast.rs  executor.rs  grammar.pest  grammar.rs  mod.rs  parser.rs  planner.rs
src/storage/: columnar.rs  disk.rs  memory.rs  mod.rs  schema.rs
src/wal/: log.rs  mod.rs  recovery.rs
tests/: integration_tests.rs  test_config.rs  test_cypher_execution.rs
