[package]
name = "deepgraph"
version = "0.1.0"
edition = "2021"
authors = ["DeepSkilling <learning@deepskilling.com>"]
description = "High-performance graph database with ACID guarantees, MVCC, and intelligent query optimization"
license = "MIT"
repository = "https://github.com/deepskilling/deepgraph"
homepage = "https://github.com/deepskilling/deepgraph"
documentation = "https://github.com/deepskilling/deepgraph/tree/master/doc"
readme = "README.md"
keywords = ["graph", "database", "mvcc", "acid", "query-engine"]
categories = ["database-implementations", "data-structures"]
rust-version = "1.75"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Hashing and collections
ahash = "0.8"
dashmap = "5.5"

# Logging
log = "0.4"
env_logger = "0.11"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Apache Arrow for columnar storage
arrow = "53.0"
parquet = "53.0"

# Indexing
sled = "0.34"

# Concurrency and async
tokio = { version = "1.40", features = ["full"] }
parking_lot = "0.12"

# Query parsing
pest = "2.7"
pest_derive = "2.7"

# Time utilities
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.23"

[[bench]]
name = "graph_ops"
harness = false

[lib]
name = "deepgraph"
path = "src/lib.rs"

[[bin]]
name = "deepgraph-cli"
path = "src/bin/cli.rs"

