[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "deepgraph"
version = "0.1.0"
description = "High-performance graph database with ACID guarantees, MVCC, and intelligent query optimization"
authors = [
    {name = "DeepSkilling", email = "learning@deepskilling.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["graph", "database", "mvcc", "acid", "query-engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/deepskilling/deepgraph"
Repository = "https://github.com/deepskilling/deepgraph"
Documentation = "https://github.com/deepskilling/deepgraph/tree/master/doc"
"Bug Tracker" = "https://github.com/deepskilling/deepgraph/issues"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "deepgraph"

